// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no devServer.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no devServer.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": [Function],
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "/path/to/custom/server/",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
